Move and update jdtls